--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
 	<main>
 		<p>This page was generated from Wes' File Structure Template Repo.</p>
-		
-		<p>Go crazy and customize me.</p>
+
+		<p>hello minons.</p>
 	</main>
 
 
