--- a/lab2/helloworld.html
+++ b/lab2/helloworld.html
@@ -6,7 +6,8 @@
   </head>
   <body>
     <h1>Hello World</h1>
-    <img src="img/art-red-yellow.jpg">
+    <img src="img/art-red-yellow.jpg" width="800">
+    
       <p> Hey cst251 class my name is carlos salazar and I live in salinas,
          california. Im a transfer student from hartnell college and majoring in
        CD with a concetration of visual design. My hobbies are basketball, spending
