--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My_Name Homepage</title>
+	<title>CARLOS's Homepage</title>
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 </head>
-<body>
-	<main>
-		<p>This page was generated from Wes' File Structure Template Repo.</p>
+	<body>
+		<main>
+			<h1>Carlos Salazar</h1>
+			<img src="img/me_and_dog.jpg" width="400"/>
 
-		<p>hello minons.</p>
-	</main>
+			<p> Hey cst251 class my name is carlos salazar and I live in salinas,
+				 california. Im a transfer student from hartnell college and majoring in
+			 CD with a concetration of visual design. My hobbies are basketball, spending
+			time with my dog, painting, and illlustrating. </p>
 
+			<div class='assignments major-section'>
+				<h2>CST251 LABS</h2>
+					<ul> 
+						<li><a href="lab2/helloworld.html">lab2:Your first HTML</a></li> 
+						<li><a href="lab3/index.html">lab3:File Structure</a></li> 
+						<li><a href="lab4/">lab4:</a></li> 
+						<li><a href="lab5/">lab5:</a></li> 
+						<li><a href="lab6/">lab6:</a></li> 
+					</ul>
+			</div>
 
-</body>
+		</main>
+	</body>
 </html>
