--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>LAB3_Flie_Structure</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
+
 <body>
 
-</body>
+	<h1>Lab 3: File Stuctures</h1>
+		<p>The big idea for this lab was to work with a partner to
+			create a local file structure on our computer and add index.html files.</p>
+
+	<h2>Challenges</h2>
+		<p>A challenge that we ran into was how to organize  our files
+			well. After that, the assignment went pretty smooth. We problem
+			 solved and were able to work though most of our problems. We only had one problem,
+			 when we ran index.html square symbols showed up above our links.
+			 We cross referenced our codes but found no significant diffences.	</p>
+
+	<h2>Results</h2>
+		<p>The results for this lab gave us more insight on how we can use stuctures
+			to further develop our websites. We were able to add images, create lists,
+			and add links. However, we were not able to solve our only problem. Below
+			are screenshots of our file structures:</p>
+			<figure>
+
+				<img src="img/screenshot1.jpeg" 	width=600 />
+				<figcaption>Fig.1 - Task 1 screenshot</figcaption>
+					
+					<img src="img/screenshot2.jpeg"	width=600 />
+				<figcaption>Fig.2 - Task 2 screenshot</figcaption>
+
+					<img src="img/screenshot3.png"	width=600 />
+				<figcaption>Fig.3 - Task3 screenshot</figcaption>
+
+				<img src="img/screenshot4.png"	width=600 />
+				<figcaption>Fig.4 - Task 3 screenshot</figcaption>
+
+					<img src="img/square.jpeg"	width=600 />
+				<figcaption>Fig.5 - Challenges screenshot</figcaption>
+
+			</figure>
+
+		</body>
 </html>
