--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 			 CD with a concetration of visual design. My hobbies are basketball, spending
 			time with my dog, painting, and illlustrating. </p>
 
-			<div class='assignments major-section'>
-				<h2>CST251 LABS</h2>
-					<ul> 
-						<li><a href="lab2/helloworld.html">lab2:Your first HTML</a></li> 
-						<li><a href="lab3/index.html">lab3:File Structure</a></li> 
-						<li><a href="lab4/">lab4:</a></li> 
-						<li><a href="lab5/">lab5:</a></li> 
-						<li><a href="lab6/">lab6:</a></li> 
-					</ul>
-			</div>
+			<nav class="assignments major-section"> 
+			<h2>CST LABS</h2> 
+			<ul>  
+					<li><a href="lab2/helloworld.html">Lab 2: Your First HTML</a></li> 
+					<li><a href="lab3/index.html">Lab 3: File Structure</a></li> 
+					<li><a href="lab4/index.html">Lab 4: File Transfer</a></li> 
+					<li><a href="lab5/index.html">Lab 5: More HTML</a></li> 
+					<li><a href="lab6/index.html">Lab 6: More Complicated HTML</a></li> 
+				</ul> 
+			</nav>
 
 		</main>
 	</body>
