--- a/lab3/index.html
+++ b/lab3/index.html
@@ -42,6 +42,11 @@
 				<figcaption>Fig.5 - Challenges screenshot</figcaption>
 
 			</figure>
+		<nav> 
+				<ul> 
+						 <li><a href="../index.html">CST251 Homepage</a></li> 
+				</ul> 
+		</nav>
 
 		</body>
 </html>
