update for lab 4

--- a/lab4/index.html
+++ b/lab4/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 4 - Flie_transfer</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-
+	<h1>lAB 4 Flie Transfer</h1>
+	<h2>Lab Subject</h2>
+		<p> For this lab, the focus was to work with a partner and test your own local
+			flies and upload them to the server with Github.</p>
+	<h2>Difficulties Encountered</h2>
+		<p>Our only struggle was figuring out what was the concept of the lab. Other than
+			that, we had no struggles</p>
+	<h2>Results of the Work</h2>
+		<p>These screenshot shows our results of our work.</p>
+		<img src="img/lab4html.png" width="500" style="border:5px soild red"/>
+		<img src="img/lab4browser" width="500" style="border:5px soild red"/>
+		
 </body>
 </html>
