--- a/lab4/index.html
+++ b/lab4/index.html
@@ -16,7 +16,7 @@
 	<h2>Results of the Work</h2>
 		<p>These screenshot shows our results of our work.</p>
 		<img src="img/lab4html.png" width="500" style="border:5px soild red"/>
-		<img src="img/lab4browser" width="500" style="border:5px soild red"/>
+		<img src="img/lab4browser.png" width="500" style="border:5px soild red"/>
 		
 </body>
 </html>
