update after finish from lab 4

--- a/lab2/helloworld.html
+++ b/lab2/helloworld.html
@@ -17,5 +17,10 @@
         major transfering from Hartnell. Other than graphic design I really love math.
       I dont have many hobbies but I really enjoy journaling, watching Korean dramas,
     and listening to music.</p>
+    <nav>
+      <ul>
+        <li><a href="../index.html">CST251 Homepage</a></li>
+      </ul>
+    </nav>
   </body>
 </html>
