--- a/lab4/index.html
+++ b/lab4/index.html
@@ -15,9 +15,13 @@
 			that, we had no struggles</p>
 	<h2>Results of the Work</h2>
 		<p>These screenshot shows our results of our work.</p>
-		
+
 		<img src="img/lab4html.png" width="500" style="border:5px soild red"/>
 		<img src="img/lab4browser.png" width="500" style="border:5px soild red"/>
-
+		<nav>
+      <ul>
+        <li><a href="../index.html">CST251 Homepage</a></li>
+      </ul>
+    </nav>
 </body>
 </html>
