Update ful from lab 4

--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
 			 CD with a concetration of visual design. My hobbies are basketball, spending
 			time with my dog, painting, and illlustrating. </p>
 
-			<nav class="assignments major-section"> 
-			<h2>CST LABS</h2> 
-			<ul>  
-					<li><a href="lab2/helloworld.html">Lab 2: Your First HTML</a></li> 
-					<li><a href="lab3/index.html">Lab 3: File Structure</a></li> 
-					<li><a href="lab4/index.html">Lab 4: File Transfer</a></li> 
-					<li><a href="lab5/index.html">Lab 5: More HTML</a></li> 
-					<li><a href="lab6/index.html">Lab 6: More Complicated HTML</a></li> 
-				</ul> 
-			</nav>
+			<div class='assignments major-selection'>
+						<h2>CST251 LABS</h2>
 
+				<ul>
+				  <li><a href='lab2/helloworld.html'>Lab 2: Your First HTML</a></li>
+				  <li><a href='lab3/index.html'>Lab 3: File Structure</a></li>
+				  <li><a href='lab4/'>Lab 4: File Transfer</a></li>
+					<li><a href='lab5/'>Lab 5: </a></li>
+					<li><a href='lab6/'>Lab 6: </a></li>
+
+				</ul>
+			</div>
 		</main>
 	</body>
 </html>
