update for lab 5

--- a/lab5/index.html
+++ b/lab5/index.html
@@ -1,11 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 5 - More HTML</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+	<h1>lAB 5 More HTML</h1>
+	<h2>Lab Subject</h2>
+		<p> For this lab, the focus was to work with a partner and create a webpage<br>
+			 with images and links to other pages.</p>
+	<h2>Difficulties Encountered</h2>
+		<p>We had a bit of difficulty understanding the process and path that is<br>
+		used to make an image a link. We worked through the process together and<br>
+		we now understand the process better. Other than that, the lab was very<br>
+		straight foward and simple</p>
+	<h2>Results of the Work</h2>
+  <a href="https://www.instagram.com/zar_design831/" target="_blank">
+		 <img src="img/instapage.png" width=400 style="border:4px solid black">
+	</a>
 
+	<a href="https://www.instagram.com/p/B_3iMSFgd3h/?utm_source=ig_web_copy_link" target="_blank">
+		<img src="img/doggo.png" width=400 style="border:4px solid black">
+	</a>
+
+	<a href="https://www.instagram.com/p/B-auPoGppKw/?utm_source=ig_web_copy_link" target="_blank">
+	 	<img src="img/801build.png" width=400 style="border:4px solid black">
+ 	</a>
+
+		<nav>
+      <ul>
+        <li><a href="../index.html">CST251 Homepage</a></li>
+      </ul>
+    </nav>
 </body>
 </html>
