last update for lab 5

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				  <li><a href='lab2/helloworld.html'>Lab 2: Your First HTML</a></li>
 				  <li><a href='lab3/index.html'>Lab 3: File Structure</a></li>
 				  <li><a href='lab4/'>Lab 4: File Transfer</a></li>
-					<li><a href='lab5/'>Lab 5: </a></li>
+					<li><a href='lab5/'>Lab 5: More html </a></li>
 					<li><a href='lab6/'>Lab 6: </a></li>
 
 				</ul>
