finish of lab 6 and edit main page

--- a/lab6/index.html
+++ b/lab6/index.html
@@ -2,10 +2,58 @@
 <html>
 <head>
 	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
+<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
+	<div id="method">
+	<h1>lAB 6 More Complicated HTML</h1>
+		<img src="img/art2.jpg" width=400 style="border:4px solid black">
+	<div id="content">
+		<h2>Lab Subject</h2>
+			<p> For this lab, the focus was to work with a partner and create an <br>
+				html file and then style it with a CSS file.</p><br>
+		<h2>Difficulties Encountered</h2>
+			<p>We had a bit of difficulty understanding the lab. We worked through each task<br> 
+				and were succesful in the end. Other than that, the lab was enjoyable.</p>
+		<h2>Results of the Work</h2>
+			<p>The results of our work gave us more experience on how to create a better<br>
+			looking website. This also gave us knowledge how to create a table</p>
+	</div>
+		<form action="https://google.com/search" method="GET" target="_blank">
+				Do you like to paint art?<br>
+				<select name="YN">
+					<option disabled selected>Please Select</option>
+					 <option value="yes">Yes</option>
+					 <option value="no">No</option>
+				</select><br><br>
+
+				What is your favorite painting artist? : <br>
+			  <textarea name="artistname"></textarea><br><br>
+
+			  What is your favorite painting of the artist:<br>
+			  <input type="text" name="q"/><br><br>
+
+			  Type something related to art:<br>
+			  <input type="password" name="relatedart"/><br><br>
+
+			  <label><input type="checkbox" name="art"/>
+			    I Like to look at different kinds of art.</label><br><br>
+
+			  <label><input type="radio" name="animal" value="cats">
+			    I pefer abstract paints than realistic ones.</label><br>
+
+			  <label><input type="radio" name="animal" value="dogs">
+			   I pefer realistic paints than abstract ones.</label><br>
+
+				 <input type="submit" value="Search">
+
+			</form>
+	</div>
+	<nav>
+		<ul>
+			<li><a href="../index.html">CST251 Homepage</a></li>
+		</ul>
+	</nav>
 
 </body>
 </html>
