--- a/lab6/index.html
+++ b/lab6/index.html
@@ -14,10 +14,10 @@
 				html file and then style it with a CSS file.</p><br>
 		<h2>Difficulties Encountered</h2>
 			<p>We had a bit of difficulty understanding the lab. We worked through each task<br> 
-				and were succesful in the end. Other than that, the lab was enjoyable.</p>
+				and were successful in the end. Other than that, the lab was enjoyable.</p>
 		<h2>Results of the Work</h2>
 			<p>The results of our work gave us more experience on how to create a better<br>
-			looking website. This also gave us knowledge how to create a table</p>
+			looking website. This also gave us knowledge how to create a table.</p>
 	</div>
 		<form action="https://google.com/search" method="GET" target="_blank">
 				Do you like to paint art?<br>
