--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				  <li><a href='lab4/index.html'>Lab 4: File Transfer</a></li>
 					<li><a href='lab5/index.html'>Lab 5: More html </a></li>
 					<li><a href='lab6/index.html'>Lab 6: More Complicated html </a></li>
-
+					<li><a href='lab7/index.html'>Lab 7: Intro to CSS </a></li>
 				</ul>
 			</div>
 		</main>
