update for lab 8

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 					<li><a href='lab5/index.html'>Lab 5: More html </a></li>
 					<li><a href='lab6/index.html'>Lab 6: More Complicated html </a></li>
 					<li><a href='lab7/index.html'>Lab 7: Intro to CSS </a></li>
+					<li><a href='lab8/index.html'>Lab 8: CSS Selectors </a></li>
 				</ul>
 			</div>
 		</main>
