--- a/lab8/index.html
+++ b/lab8/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="method">
-    	<h1>lAB 7 Intro to CSS</h1>
+    	<h1>lAB 8 CSS Selectors</h1>
 
       <div class="image">
     		<img src="img/hatdog.jpg">
