--- a/lab8/index.html
+++ b/lab8/index.html
@@ -23,7 +23,7 @@
         <div id="text">
     			<p class="unique">We had a bit of difficulty understanding the lab.
             We got stuck trying to style more than one element at a time.
-             We worked through each task and were succesful in the end. </p>
+             We worked through each task and were successful in the end. </p>
         </div>
 
     		<h2>Results of the Work</h2>
