--- a/index.html
+++ b/index.html
@@ -3,28 +3,32 @@
 <head>
 	<title>CARLOS's Homepage</title>
 	<link rel="stylesheet" type="text/css" href="css/site.css">
+	<link href='https://fonts.googleapis.com/css?family=Caesar Dressing' rel='stylesheet'>
 </head>
 	<body>
 		<main>
 			<h1>Carlos Salazar</h1>
+
 			<img src="img/me_and_dog.jpg" width="300"/>
 
-			<p> Hey cst251 class my name is carlos salazar and I live in salinas,
-				 california. Im a transfer student from hartnell college and majoring in
-			 CD with a concetration of visual design. My hobbies are basketball, spending
-			time with my dog, painting, and illlustrating. </p>
+			<div id="text">
+				<p class="unique"> Hey cst251 class my name is carlos salazar and I live in salinas,
+					 california. Im a transfer student from hartnell college and majoring in
+				 CD with a concetration of visual design. My hobbies are basketball, spending
+				time with my dog, painting, and illlustrating. </p>
+			</div>
 
-			<div class='assignments major-selection'>
-						<h2>CST251 LABS</h2>
-
+			<div id="assignments">
+					<h2>CST251 LABS</h2>
 				<ul>
-				  <li><a href='lab2/helloworld.html'>Lab 2: Your First HTML</a></li>
-				  <li><a href='lab3/index.html'>Lab 3: File Structure</a></li>
-				  <li><a href='lab4/index.html'>Lab 4: File Transfer</a></li>
-					<li><a href='lab5/index.html'>Lab 5: More html </a></li>
-					<li><a href='lab6/index.html'>Lab 6: More Complicated html </a></li>
-					<li><a href='lab7/index.html'>Lab 7: Intro to CSS </a></li>
-					<li><a href='lab8/index.html'>Lab 8: CSS Selectors </a></li>
+				  <li><a href='lab2/helloworld.html'>Lab 2: Your First HTML</a><br></li>
+				  <li><a href='lab3/index.html'>Lab 3: File Structure</a><br></li>
+				  <li><a href='lab4/index.html'>Lab 4: File Transfer</a><br></li>
+					<li><a href='lab5/index.html'>Lab 5: More html </a><br></li>
+					<li><a href='lab6/index.html'>Lab 6: More Complicated html </a><br></li>
+					<li><a href='lab7/index.html'>Lab 7: Intro to CSS </a><br></li>
+					<li><a href='lab8/index.html'>Lab 8: CSS Selectors </a><br></li>
+					<li><a href='lab9/index.html'>Lab 9: Styling Block Elements </a><br></li>
 				</ul>
 			</div>
 		</main>
