--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 					<li><a href='lab7/index.html'>Lab 7: Intro to CSS </a><br></li>
 					<li><a href='lab8/index.html'>Lab 8: CSS Selectors </a><br></li>
 					<li><a href='lab9/index.html'>Lab 9: Styling Block Elements </a><br></li>
+					<li><a href='lab10/index.html'>Lab 10: Styling text Elements </a><br></li>
 				</ul>
 			</div>
 		</main>
