--- a/lab10/index.html
+++ b/lab10/index.html
@@ -14,7 +14,7 @@
           <img src="img/meandoreo.jpg">
         </div>
 
-        <h1><span>lAB 10 styling text elements</span></h1>
+        <h1><span>lAB 10 Styling Text Elements</span></h1>
 
         <div id="text">
           <h2><span>Challenges</span></h2>
