--- a/lab11/index.html
+++ b/lab11/index.html
@@ -9,11 +9,10 @@
   <body>
 
     	<div id="content">
-
         <nav id="links">
           <ul>
-            <a href="../index.html">Homepage 251</a>
-            <a href="css/index.css">CSS code</a>
+            <li><a href="../index.html">CST 251 Homepage</a></li>
+            <li><a href="css/index.css" target="_blank">CSS code</a></li>
           </ul>
         </nav>
 
@@ -49,12 +48,6 @@
         </div>
 
     	</div>
-
-      <nav>
-        <ul>
-          <li><a href="../index.html">CST251 Homepage</a></li>
-        </ul>
-      </nav>
 
   </body>
 </html>
