--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 					<li><a href='lab9/index.html'>Lab 9: Styling Block Elements </a><br></li>
 					<li><a href='lab10/index.html'>Lab 10: Styling text Elements </a><br></li>
 					<li><a href='lab11/index.html'>lab 11: Advanced Block-level Styling I</a><br></li>
+					<li><a href='lab12/index.html'>lab 12: Advanced Block-level Styling II</a><br></li>
 				</ul>
 			</div>
 		</main>
