--- a/lab12/index.html
+++ b/lab12/index.html
@@ -18,9 +18,8 @@
          is a Maltese. I like to live life to the fullest
       and i like to learn new activites every time. </p>
     </div>
-    <div id="center-horz">
-      <p> Some of the activites that
-    I have done before are skydiving, snowboarding, kayaking, and dirtbiking.</p>
+    <div id="center-horz">< Some of the activites that
+    I have done before are skydiving, snowboarding, kayaking, and dirtbiking.>
     </div>
     <div id="center-img">
       <img src="img/bignose.jpg">
