--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 					<li><a href='lab10/index.html'>Lab 10: Styling text Elements </a><br></li>
 					<li><a href='lab11/index.html'>lab 11: Advanced Block-level Styling I</a><br></li>
 					<li><a href='lab12/index.html'>lab 12: Advanced Block-level Styling II</a><br></li>
+					<li><a href='lab13/index.html'>lab 13: lab 13 Forgery Made Fun</a><br></li>
 				</ul>
 			</div>
 		</main>
