--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 					<li><a href='lab11/index.html'>lab 11: Advanced Block-level Styling I</a><br></li>
 					<li><a href='lab12/index.html'>lab 12: Advanced Block-level Styling II</a><br></li>
 					<li><a href='lab13/index.html'>lab 13: lab 13 Forgery Made Fun</a><br></li>
+					<li><a href='lab14/index.html'>lab 14: lab 14 Typography II</a><br></li>
 					<li><a href='lab15/index.html'>lab 15: Fancy CSS 1</a><br></li>
 				</ul>
 			</div>
