--- a/lab14/index.html
+++ b/lab14/index.html
@@ -13,7 +13,7 @@
     		</ul>
     </nav>
 <main id="content">
-		<h1>lab 14: lab 14 Typography II<</h1>
+		<h1>lab 14: lab 14 Typography II</h1>
 		<div id="challenge">
 			<h2>Challenge</h2>
 			<p> Working with your partner, use block-level and typography css to recreate a more complicated webpage.</p>
