--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 					<li><a href='lab13/index.html'>lab 13: lab 13 Forgery Made Fun</a><br></li>
 					<li><a href='lab14/index.html'>lab 14: lab 14 Typography II</a><br></li>
 					<li><a href='lab15/index.html'>lab 15: Fancy CSS 1</a><br></li>
-					<li><a href='lab16/index.html'>lab 15: Fancy CSS 2</a><br></li>
+					<li><a href='lab16/index.html'>lab 16: Fancy CSS 2</a><br></li>
+					<li><a href='lab17/index.html'>lab 17: CSS LAYOUT</a><br></li>
 				</ul>
 			</div>
 		</main>
