--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 					<li><a href='lab15/index.html'>lab 15: Fancy CSS 1</a><br></li>
 					<li><a href='lab16/index.html'>lab 16: Fancy CSS 2</a><br></li>
 					<li><a href='lab17/index.html'>lab 17: CSS LAYOUT</a><br></li>
+					<li><a href='lab18/index.html'>lab 18: Responsive Design</a><br></li>
 				</ul>
 			</div>
 		</main>
