--- a/lab18/flexbox.html
+++ b/lab18/flexbox.html
@@ -30,7 +30,7 @@
             <p><a href="https://www.youtube.com/watch?v=ryiZ6SVQeUQ">Look at the material, you can be the judge of it.</a><br>
               <a href="https://www.youtube.com/watch?v=MUHsrDIlIuY">I mean, let me ask the audience.</a></p>
           </section>
-
+          <img src="img/dd4.gif">
         </main>
 
         <aside class="links">
@@ -45,8 +45,6 @@
 
         <nav>
           <a href="../index.html">Homepage</a>
-          <a href="index.html">Lab18</a>
-          <a href="float.html">Float html</a>
           <a href="flexbox.html">Flexbox html</a>
         </nav>
 
