--- a/lab20/index.html
+++ b/lab20/index.html
@@ -60,7 +60,7 @@
         <div class="row">
             <div class="col">
               <h2>PROBLEMS</h2>
-              <p>I had diffculties coming up with different design layouts in which took time to get an idea of how to inflict one on.</p>
+              <p>I had difficulties coming up with different design layouts in which took time to get an idea of how to inflict one on.</p>
             </div>
             <div class="col">
               <h2>RESULTS</h2>
