--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 					<li><a href='lab19/index.html'>lab 19:Bootstrap Framework </a><br></li>
 					<li><a href='lab20/index.html'>lab 20:Team Project Sketches </a><br></li>
 					<li><a href='lab21/index.html'>lab 21:2nd Draft Team Project Sketches </a><br></li>
+					<li><a href='finalProject'>Final Project</a><br></li>
 				</ul>
 			</div>
 		</main>
