--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -27,10 +27,10 @@
   				    <li class="nav-item dropdown">
   				      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown"></a>
   				      <div class="dropdown-menu">
-  				        <a class="dropdown-item" href="../lab18/index.html">Disney +</a>
-  								<a class="dropdown-item" href="../lab17/index.html">HBO</a>
-  								<a class="dropdown-item" href="../lab16/index.html">Hulu</a>
-  								<a class="dropdown-item" href="../lab15/index.html">Netflix</a>
+  				        <a class="dropdown-item" href="https://carsons507.github.io/cst251/final-project/displus.html">Disney +</a>
+  								<a class="dropdown-item" href="https://brrriiix3.github.io/cst251/hbo/index.html">HBO</a>
+  								<a class="dropdown-item" href="https://mauriciovega831.github.io/cst251/labfinal/final.html">Hulu</a>
+  								<a class="dropdown-item" href="https://salazar1998.github.io/cst251b/finalproject/index.html">Netflix</a>
   							</div>
   				    </li>
   				  </ul>
