--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -36,21 +36,21 @@
   				  </ul>
   				</nav>
   <div id="image1">
-    <img src="img/ngif.gif">
+    <img src="img/ngif.gif" class="center">
   </div>
   <div id="intro">
     <p> Netflix, Inc. is an American over-the-top content platform and production company headquartered in Los Gatos, California. Netflix was founded in 1997 by Reed Hastings and Marc Randolph in Scotts Valley, California. The company's primary business is a subscription-based streaming service offering online streaming from a library of films and television series, including those produced in-house</p>
   </div> <!-- row1 -->
   <div class="row"> <!-- row2 -->
    <div class="col col-sm-9">
-    <h2>Main Content</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet porttitor ex. Nullam tempus tortor ut suscipit consectetur. Duis vehicula odio nec tortor dignissim, ac feugiat orci bibendum. Cras commodo molestie malesuada. Donec vitae porttitor justo. Quisque tincidunt massa faucibus viverra fermentum. Etiam urna ante, eleifend eget velit vitae, semper pretium est. Aenean sodales eros ut tellus auctor, sit amet euismod mauris condimentum.</p>
+    <h2>How does Netflix work?</h2>
+    <p>Netflix is a subscription-based streaming service that allows our members to watch TV shows and movies without commercials on an internet-connected device. Netflix offers a variety of plans to meet your needs starting at $8.99. You can download the Netflix app on all your favorite devices and watch unlimited movies and TV shows. </p>
 
     <br><br>
 
     <div class="row">
       <div class="col">
-       <h2>Shows</h2>
+       <h2>Top Shows</h2>
          <div class="tooltip-wrap">
             <img src="img/dg.png" alt="Some Image" /><br><br>
             <div class="tooltip-content">
@@ -60,36 +60,36 @@
         <div class="tooltip-wrap">
            <img src="img/bm.png" alt="Some Image" /><br><br>
            <div class="tooltip-content">
-             <p>Despite his heroics, security guard Ricard Jewell becomes a suspect in the FBI investigation of a foiled terrorist attack at the 1996 Olympics.</p>
+             <p>Teenage friends find their lives upended by the wonders and horrors of puberty in this edgy comedy.</p>
            </div>
        </div>
        <div class="tooltip-wrap">
           <img src="img/selena.png" alt="Some Image" /><br><br>
           <div class="tooltip-content">
-            <p>Despite his heroics, security guard Ricard Jewell becomes a suspect in the FBI investigation of a foiled terrorist attack at the 1996 Olympics.</p>
+            <p>Iconic Mexican-American performer Selena rises to fame as she and her famliy make sacrifices in order to achieve their lifelong dreams.</p>
           </div>
       </div>
       </div>
       <div class="col">
-       <h2>Movies</h2>
+       <h2>Top Movies</h2>
          <div class="tooltip-wrap">
             <img src="img/ava.png" alt="Some Image" /><br><br>
             <div class="tooltip-content">
-              <p>Despite his heroics, security guard Ricard Jewell becomes a suspect in the FBI investigation of a foiled terrorist attack at the 1996 Olympics.</p>
+              <p> An elite assassin wrestling with doubts about her work scrambles to protect herself after a hit goes dangerously wrong. </p>
             </div>
         </div>
 
         <div class="tooltip-wrap">
            <img src="img/prom.png" alt="Some Image" /><br><br>
            <div class="tooltip-content">
-             <p>Despite his heroics, security guard Ricard Jewell becomes a suspect in the FBI investigation of a foiled terrorist attack at the 1996 Olympics.</p>
+             <p>A group of broadway stars shake up a small Indiana town as they rally behind a teen who just wants to attend prom with her girlfirend.</p>
            </div>
        </div>
 
        <div class="tooltip-wrap">
           <img src="img/t9.png" alt="Some Image" /><br><br>
           <div class="tooltip-content">
-            <p>Despite his heroics, security guard Ricard Jewell becomes a suspect in the FBI investigation of a foiled terrorist attack at the 1996 Olympics.</p>
+            <p>A group of dirty Atlanta cops blackmailed by the Russian mob plan a seemingly impossible heist that sets off an explosive reaction of violence.</p>
           </div>
       </div>
       </div>
@@ -97,12 +97,12 @@
    </div>
    <div class="col col-sm-3">
     <h2>Recommended</h2>
-    <img src="img/office.jpg"><br>
-    <p></p><br><br>
-    <img src="img/tpn.png"><br>
-    <p></p><br><br>
-    <img src="img/bb.jpg"><br>
-    <p></p><br><br>
+    <img src="img/office.jpg"><br><br>
+    <p>An American mockumentary sitcom television series that depicts the everyday work lives of office employees in the Scranton, Pennsylvania branch of the fictional Dunder Mifflin Paper Company.</p><br><br>
+    <img src="img/tpn.png"><br><br>
+    <p>When three gifted kids learn that their isolated orphanage isn't the haven they thought, they, vow to lead the other children in a risky escape plan</p><br><br>
+    <img src="img/bb.jpg"><br><br>
+    <p>Breaking Bad follows Walter White, a meek high school chemistry teacher who transforms into a ruthless player in the local methamphetamine drug trade, driven by a desire to provide for his family after being diagnosed with terminal lung cancer.</p><br><br>
    </div>
   </div>
  </main>
